# grid_shapes

./: Cargo.toml  README.md
src/: lib.rs
src/circle/: mod.rs
src/grid_extentions/: mod.rs
src/iters/: circle.rs  line.rs  mod.rs  octant.rs  rectangle.rs
src/iters/line/: bresenham.rs  linear.rs  octant.rs  tunnel_horizontal_vertical.rs  tunnel_vertical_horizontal.rs
src/iters/rectangle/: border_iter.rs  rectangle_iter.rs
src/line/: mod.rs
src/rectangle/: mod.rs
src/shapes/: circle.rs  line.rs  mod.rs  rectangle.rs  shape.rs
src/shapes/iters/: mod.rs
src/shapes/iters/circle/: circle_circumference_iter.rs  circle_circumference_iter_step.rs  circle_iter.rs  circle_iter_step.rs  mod.rs
src/shapes/iters/line/: line_bresenham_iter.rs  line_tunnel_horizontal_vertical.rs  line_tunnel_vertical_horizontal.rs  mod.rs  octant.rs
src/shapes/iters/rectangle/: mod.rs  rectangle_border_iter.rs  rectangle_iter.rs
src/units/: coord.rs  mod.rs  shape.rs  size.rs
