[package]
name = "grid_shapes"
version = "0.1.3"
authors = ["Wes Feldsine <laocoon7@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A general purpose 2d grid shape library"
repository = "https://github.com/Laocoon7/grid_shapes"
homepage = "https://github.com/Laocoon7/grid_shapes"
# documentation
keywords = ["grid", "shapes", "tile", "2d", "coordinate"]
categories = ["algorithms", "data-structures", "game-development"]
readme = "./README.md"

[features]
default = [
    "extentions",
]

extentions = []

serde = [
    "dep:serde",
    "coord_2d/serialize",
    "grid_2d/serialize",
]


[dependencies]
coord_2d = { version = "0.3" } # A general purpose 2d coordinate
grid_2d = { version = "0.15" } # A general purpose 2d grid

serde = { version = "1", optional = true } # A generic serialization/deserialization framework

# [[example]]
# name = "test"
# path = "examples/test.rs"
# required-features = []